# Agentic-AI

./: README.md
StockMarketAnalyzer/: .env  DOCKER_DEPLOYMENT.md  Dockerfile  PROJECT_DOCUMENTATION.md  README.md  docker-compose.yml  mcp_client.py  mcp_server.py  pyproject.toml  requirements.txt
